# sigma

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  PROTOCOL.md  README.MD  README.md  base.Dockerfile  config.ini.example  docker-compose.yaml  main.cpp  turnserver.conf.example
.github/workflows/: release.yaml
client/: CMakeLists.txt  CmakeLists.txt  main.cpp  palette.txt
client/assets/: servers.csv
client/include/: audio_capture_encoder.h  audio_decoder.h  audio_output.h  auth_handler.h  avatar_image_provider.h  call_handler.h  call_manager.h  chat_handler.h  client_controller.h  client_controller.hpp  command_types.h  transport.h  video_capture_encoder.h  video_decoder.h  video_image_provider.h  webrtc.h
client/qml/: CallWindow.qml  ChatScreen.qml  FriendsScreen.qml  General_window.qml  IconButton.qml  Login_server.qml  Main.qml  Register_server.qml  ServerButton.qml  Server_choice.qml  Style.qml  Toast.qml
client/src/: audio_capture.cpp  audio_capture_encoder.cpp  audio_decoder.cpp  audio_output.cpp  auth_handler.cpp  avatar_image_provider.cpp  call_manager.cpp  chat_handler.cpp  client_controller.cpp  command_types.cpp  transport.cpp  video_capture.cpp  video_capture_encoder.cpp  video_decoder.cpp  webrtc.cpp
common/inc/: commands.h  logging.h  responses.h  structures.h  wire_command_types.h
common/src/: logging.cpp  wire_command_types.cpp
qml/: General_window.qml  Login_server.qml  Main.qml  Register_server.qml  Server_choice.qml  Style.qml
server/: CMakeLists.txt  Dockerfile  server.cpp
server/database/: docker-compose.yaml
server/database/init/: database.sql
server/inc/: call_registry.h  command_types.h  commands.h  connection_manager.h  context.h  dispatcher.h  logging.h  network_manager.h  registry.h  repositories.h  responses.h  server_commands.h  server_responses.h  services.h  statuses.h  structures.h  task.h
server/src/: call_registry.cpp  command_types.cpp  connection_manager.cpp  dispatcher.cpp  logging.cpp  network_manager.cpp  registry.cpp  repositories.cpp  services.cpp  task.cpp
